Fix address bar highlight contrast
Replaced FG, BG with Highlight colors

--- a/custom.css
+++ b/custom.css
@@ -74,8 +74,8 @@
 }
 
 #browser:not(.fullscreen):not(.is-settingspage) .UrlBar-UrlField::selection {
-    background: var(--colorAccentFg);
-    color: var(--colorAccentBg);
+    background: var(--colorHighlightBgDark);
+    color: var(--colorHighlightFg);
 }
 
 /* #browser:not(.fullscreen).theme-dark.hasfocus .UrlBar-UrlField:not(:focus) {
